<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicial">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="158dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tests"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="161dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videos"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="506dp" />
</android.support.constraint.ConstraintLayout>